--- a/notebook/running lightkurve on Yu+2018 candidates.ipynb
+++ b/notebook/running lightkurve on Yu+2018 candidates.ipynb
@@ -13,8 +13,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-13T23:18:41.986667Z",
-     "start_time": "2018-04-13T23:18:41.974756Z"
+     "end_time": "2018-05-12T00:55:45.831273Z",
+     "start_time": "2018-05-12T00:55:45.821963Z"
     },
     "collapsed": true
    },
@@ -43,8 +43,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-13T23:18:42.520105Z",
-     "start_time": "2018-04-13T23:18:41.990886Z"
+     "end_time": "2018-05-12T00:55:46.896168Z",
+     "start_time": "2018-05-12T00:55:46.376682Z"
     },
     "collapsed": true
    },
@@ -63,8 +63,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-13T23:18:42.588876Z",
-     "start_time": "2018-04-13T23:18:42.522550Z"
+     "end_time": "2018-05-12T00:55:49.580453Z",
+     "start_time": "2018-05-12T00:55:49.521469Z"
     },
     "collapsed": true
    },
@@ -78,8 +78,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-13T23:18:42.635048Z",
-     "start_time": "2018-04-13T23:18:42.592436Z"
+     "end_time": "2018-05-12T00:55:49.923399Z",
+     "start_time": "2018-05-12T00:55:49.894831Z"
     },
     "scrolled": true
    },
@@ -213,8 +213,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-13T23:18:43.749501Z",
-     "start_time": "2018-04-13T23:18:42.638358Z"
+     "end_time": "2018-05-12T00:55:56.534286Z",
+     "start_time": "2018-05-12T00:55:55.206421Z"
     },
     "collapsed": true
    },
@@ -235,15 +235,15 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-13T23:18:43.760300Z",
-     "start_time": "2018-04-13T23:18:43.752174Z"
+     "end_time": "2018-05-12T00:55:56.543598Z",
+     "start_time": "2018-05-12T00:55:56.536755Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "31"
+       "0"
       ]
      },
      "execution_count": 6,
@@ -856,7 +856,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-13T23:20:55.390048Z",
      "start_time": "2018-04-13T23:20:55.386326Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
