--- a/notebook/running lightkurve on Yu+2018 candidates.ipynb
+++ b/notebook/running lightkurve on Yu+2018 candidates.ipynb
@@ -10,23 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-12T00:55:45.831273Z",
      "start_time": "2018-05-12T00:55:45.821963Z"
-    },
-    "collapsed": true
+    }
    },
    "outputs": [],
    "source": [
     "import getpass\n",
     "uname = getpass.getuser()\n",
     "\n",
-    "if uname == 'prometheus' or uname == 'jp':\n",
-    "    data_dir = '/home/'+uname+'/data/transit/c16-tpf/'\n",
+    "if uname == 'prometheus':# or uname == 'jp':\n",
+    "    data_dir = '/media'+uname+'20BA47B9BA4789EC/c16-tpf-all/kadenza-out'\n",
     "elif uname == 'muscat':\n",
-    "    data_dir = '../c16-tpf/'\n",
+    "    data_dir = '../Jerome/c16-tpf/'\n",
     "else: \n",
     "    data_dir = '.'"
    ]
@@ -40,13 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-12T00:55:46.896168Z",
      "start_time": "2018-05-12T00:55:46.376682Z"
-    },
-    "collapsed": true
+    }
    },
    "outputs": [],
    "source": [
@@ -60,13 +58,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-12T00:55:49.580453Z",
      "start_time": "2018-05-12T00:55:49.521469Z"
-    },
-    "collapsed": true
+    }
    },
    "outputs": [],
    "source": [
@@ -75,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-12T00:55:49.923399Z",
@@ -173,7 +170,7 @@
        "33359                         GO16052_LC  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,13 +207,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-12T00:55:56.534286Z",
      "start_time": "2018-05-12T00:55:55.206421Z"
-    },
-    "collapsed": true
+    }
    },
    "outputs": [],
    "source": [
@@ -232,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-12T00:55:56.543598Z",
@@ -246,13 +242,13 @@
        "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "file_list = glob(data_dir+'/Yu2018_candidates/*.fits')\n",
+    "file_list = glob(data_dir+'Yu2018Candidates/*.fits')\n",
     "file_list.sort()\n",
     "len(file_list)"
    ]
@@ -2879,7 +2875,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
